# RollingForcing-fork

./: CLAUDE.md  README.md  inference.py  pyproject.toml  requirements.txt
configs/: default_config.yaml  rolling_forcing_headkv.yaml
configs/head_configs/: classification_results.csv
headkv/: __init__.py  adaptive_cache.py  base.py  cache.py  config.py  cyclic.py  factory.py  lag.py  merge.py  recent.py  rope.py  selectors.py  stride.py  triton_rope.py
pipeline/: headkv_config.py  rolling_forcing_inference.py  rolling_forcing_training.py
prompts/: MovieGenVideoBench_num32.txt
scripts/: README.md  infer_bench.sh  infer_multi_gpu.sh
utils/: wan_wrapper.py
wan/modules/: attention.py  causal_model.py
